[package]
edition = "2021"
name = "dispatcher"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.10.0"
futures = "0.3.28"
reqwest = {version = "0.11.18", features = ["json"]}
serde = "1.0.164"
serde_json = "1.0.99"
serde_urlencoded = "0.7.1"
shared = {path = "../shared"}
