[package]
edition = "2021"
name = "dblib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dblib-macros = {path = "../macros"}
futures = "*"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "*"
