[package]
edition = "2021"
name = "databy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
csv = "1.2.2"
dblib = {path = "../lib"}
dblib-macros = {path = "../macros"}
dotenv = "0.15.0"
futures = "0.3.28"
libloading = "0.8.0"
once_cell = "1.18.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.99"
shared = {path = "../shared"}
uuid = {version = "1.4.0", features = ["v4"]}
